guava/generated/GuavaParser.cpp

// Generated from C:/Users/Patrick/Documents/Code/Guava/Guava/guava/GuavaParser.g4 by ANTLR 4.12.0


#include "GuavaParserListener.h"
#include "GuavaParserVisitor.h"

#include "GuavaParser.h"


using namespace antlrcpp;
using namespace GParser;

using namespace antlr4;

namespace {

struct GuavaParserStaticData final {
  GuavaParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  GuavaParserStaticData(const GuavaParserStaticData&) = delete;
  GuavaParserStaticData(GuavaParserStaticData&&) = delete;
  GuavaParserStaticData& operator=(const GuavaParserStaticData&) = delete;
  GuavaParserStaticData& operator=(GuavaParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag guavaparserParserOnceFlag;
GuavaParserStaticData *guavaparserParserStaticData = nullptr;

void guavaparserParserInitialize() {
  assert(guavaparserParserStaticData == nullptr);
  auto staticData = std::make_unique<GuavaParserStaticData>(
    std::vector<std::string>{
      "script_", "declaration_", "action_", "scope", "statement_", "keywordStatement_", 
      "body_", "controlFlow_", "loop_", "loopOnScope_", "loopOnBody_", "doWhileLoop", 
      "compoundStatement", "compoundAction_", "ifStatement_", "ifScope", 
      "ifBody", "conditionalKeywords_", "loopKeywords_", "conditionalLoopKeywords_", 
      "fnDeclaration", "lambda", "parameters_", "args", "argument_", "matchRegex", 
      "matchOptions_", "value_", "expression_", "identifyer_", "identifyerChain_", 
      "fnCall", "literal_", "pair_", "keywordLiteral_", "assign_", "varDeclare_", 
      "prefix_", "highPrioritySuffix_", "op1_", "op2_", "op3_", "op4_", 
      "op5_", "op6_", "lowPrioritySuffix_"
    },
    std::vector<std::string>{
      "", "'fn'", "'let'", "'if'", "'unless'", "'else'", "'do'", "'while'", 
      "'until'", "'for'", "'loop'", "'return'", "'break'", "'next'", "'last'", 
      "'once'", "'true'", "'false'", "'null'", "", "", "", "", "", "", "", 
      "", "", "", "'\\\\'", "'->'", "'=>'", "'>>'", "'<<'", "'..'", "'...'", 
      "'as'", "'+='", "'-='", "'*='", "'/='", "'%='", "'^='", "'++'", "'--'", 
      "'['", "']'", "'{'", "'}'", "'('", "')'", "'^'", "'*'", "'**'", "'/'", 
      "'%'", "'+'", "'-'", "'='", "'=='", "'==='", "'!='", "'!=='", "'>'", 
      "'>='", "'<'", "'<='", "'&&'", "'||'", "'_'", "'&'", "'$'", "'\\$'", 
      "'#'", "'@'", "'!'", "'\\u003F'", "':'", "'::'", "';'", "'\\'", "'|'", 
      "'\"'", "'''", "','", "'.'", "'~'", "'`'"
    },
    std::vector<std::string>{
      "", "Fn", "Decl", "If", "Unless", "Else", "Do", "While", "Until", 
      "For", "Loop", "Return", "Break", "Next", "Last", "Once", "True", 
      "False", "Null", "DefId", "Number", "Id", "String", "StringLit", "Digit", 
      "Word", "Letter", "UcLetter", "LcLetter", "DefOr", "Sarrow", "Darrow", 
      "LRarrow", "RLarrow", "Dot2", "Dot3", "As", "PlusEq", "MinEq", "MultEq", 
      "DivEq", "ModEq", "PowEq", "Increm", "Decrem", "Lbrack", "Rbrack", 
      "Lbrace", "Rbrace", "Lpar", "Rpar", "Pow", "Star", "StarStar", "Bslash", 
      "Mod", "Plus", "Min", "Eq", "BoolEq", "BoolDeepEq", "BoolNeq", "BoolDeepNeq", 
      "Gt", "GtEq", "Lt", "LtEq", "And", "Or", "Uscore", "AndSign", "Doll", 
      "DollLit", "Hash", "At", "ExPoint", "Qmark", "Colon", "ColonColon", 
      "Semi", "Fslash", "Bar", "Dquote", "Squote", "Com", "Dot", "Squig", 
      "Btick", "Ignore", "WS", "RETURN"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  guavaparserParserStaticData = staticData.release();
}

}

GuavaParser::GuavaParser(TokenStream *input) : GuavaParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

GuavaParser::GuavaParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  GuavaParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *guavaparserParserStaticData->atn, guavaparserParserStaticData->decisionToDFA, guavaparserParserStaticData->sharedContextCache, options);
}

GuavaParser::~GuavaParser() {
  delete _interpreter;
}

const atn::ATN& GuavaParser::getATN() const {
  return *guavaparserParserStaticData->atn;
}

std::string GuavaParser::getGrammarFileName() const {
  return "GuavaParser.g4";
}

const std::vector<std::string>& GuavaParser::getRuleNames() const {
  return guavaparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& GuavaParser::getVocabulary() const {
  return guavaparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView GuavaParser::getSerializedATN() const {
  return guavaparserParserStaticData->serializedATN;
}


//----------------- Script_Context ------------------------------------------------------------------

GuavaParser::Script_Context::Script_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GuavaParser::Script_Context::EOF() {
  return getToken(GuavaParser::EOF, 0);
}

std::vector<GuavaParser::Action_Context *> GuavaParser::Script_Context::action_() {
  return getRuleContexts<GuavaParser::Action_Context>();
}

GuavaParser::Action_Context* GuavaParser::Script_Context::action_(size_t i) {
  return getRuleContext<GuavaParser::Action_Context>(i);
}


size_t GuavaParser::Script_Context::getRuleIndex() const {
  return GuavaParser::RuleScript_;
}

void GuavaParser::Script_Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScript_(this);
}

void GuavaParser::Script_Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScript_(this);
}


std::any GuavaParser::Script_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GuavaParserVisitor*>(visitor))
    return parserVisitor->visitScript_(this);
  else
    return visitor->visitChildren(this);
}

GuavaParser::Script_Context* GuavaParser::script_() {
  Script_Context *_localctx = _tracker.createInstance<Script_Context>(_ctx, getState());
  enterRule(_localctx, 0, GuavaParser::RuleScript_);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(92);
      action_();
      setState(95); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 433119482991345630) != 0) || ((((_la - 70) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 70)) & 66593) != 0));
    setState(97);
    match(GuavaParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Declaration_Context ------------------------------------------------------------------

GuavaParser::Declaration_Context::Declaration_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GuavaParser::FnDeclarationContext* GuavaParser::Declaration_Context::fnDeclaration() {
  return getRuleContext<GuavaParser::FnDeclarationContext>(0);
}


size_t GuavaParser::Declaration_Context::getRuleIndex() const {
  return GuavaParser::RuleDeclaration_;
}

void GuavaParser::Declaration_Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration_(this);
}

void GuavaParser::Declaration_Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration_(this);
}


std::any GuavaParser::Declaration_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GuavaParserVisitor*>(visitor))
    return parserVisitor->visitDeclaration_(this);
  else
    return visitor->visitChildren(this);
}

GuavaParser::Declaration_Context* GuavaParser::declaration_() {
  Declaration_Context *_localctx = _tracker.createInstance<Declaration_Context>(_ctx, getState());
  enterRule(_localctx, 2, GuavaParser::RuleDeclaration_);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    fnDeclaration();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Action_Context ------------------------------------------------------------------

GuavaParser::Action_Context::Action_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GuavaParser::Statement_Context* GuavaParser::Action_Context::statement_() {
  return getRuleContext<GuavaParser::Statement_Context>(0);
}

tree::TerminalNode* GuavaParser::Action_Context::Semi() {
  return getToken(GuavaParser::Semi, 0);
}

GuavaParser::ScopeContext* GuavaParser::Action_Context::scope() {
  return getRuleContext<GuavaParser::ScopeContext>(0);
}

GuavaParser::ControlFlow_Context* GuavaParser::Action_Context::controlFlow_() {
  return getRuleContext<GuavaParser::ControlFlow_Context>(0);
}

GuavaParser::Declaration_Context* GuavaParser::Action_Context::declaration_() {
  return getRuleContext<GuavaParser::Declaration_Context>(0);
}


size_t GuavaParser::Action_Context::getRuleIndex() const {
  return GuavaParser::RuleAction_;
}

void GuavaParser::Action_Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAction_(this);
}

void GuavaParser::Action_Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAction_(this);
}


std::any GuavaParser::Action_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GuavaParserVisitor*>(visitor))
    return parserVisitor->visitAction_(this);
  else
    return visitor->visitChildren(this);
}

GuavaParser::Action_Context* GuavaParser::action_() {
  Action_Context *_localctx = _tracker.createInstance<Action_Context>(_ctx, getState());
  enterRule(_localctx, 4, GuavaParser::RuleAction_);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(101);
      statement_();
      setState(102);
      match(GuavaParser::Semi);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(104);
      scope();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(105);
      controlFlow_();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(106);
      declaration_();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScopeContext ------------------------------------------------------------------

GuavaParser::ScopeContext::ScopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GuavaParser::ScopeContext::Lbrace() {
  return getToken(GuavaParser::Lbrace, 0);
}

tree::TerminalNode* GuavaParser::ScopeContext::Rbrace() {
  return getToken(GuavaParser::Rbrace, 0);
}

std::vector<GuavaParser::Action_Context *> GuavaParser::ScopeContext::action_() {
  return getRuleContexts<GuavaParser::Action_Context>();
}

GuavaParser::Action_Context* GuavaParser::ScopeContext::action_(size_t i) {
  return getRuleContext<GuavaParser::Action_Context>(i);
}


size_t GuavaParser::ScopeContext::getRuleIndex() const {
  return GuavaParser::RuleScope;
}

void GuavaParser::ScopeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScope(this);
}

void GuavaParser::ScopeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScope(this);
}


std::any GuavaParser::ScopeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GuavaParserVisitor*>(visitor))
    return parserVisitor->visitScope(this);
  else
    return visitor->visitChildren(this);
}

GuavaParser::ScopeContext* GuavaParser::scope() {
  ScopeContext *_localctx = _tracker.createInstance<ScopeContext>(_ctx, getState());
  enterRule(_localctx, 6, GuavaParser::RuleScope);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(GuavaParser::Lbrace);
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 433119482991345630) != 0) || ((((_la - 70) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 70)) & 66593) != 0)) {
      setState(110);
      action_();
      setState(115);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(116);
    match(GuavaParser::Rbrace);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Statement_Context ------------------------------------------------------------------

GuavaParser::Statement_Context::Statement_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GuavaParser::KeywordStatement_Context* GuavaParser::Statement_Context::keywordStatement_() {
  return getRuleContext<GuavaParser::KeywordStatement_Context>(0);
}

GuavaParser::Assign_Context* GuavaParser::Statement_Context::assign_() {
  return getRuleContext<GuavaParser::Assign_Context>(0);
}

GuavaParser::Expression_Context* GuavaParser::Statement_Context::expression_() {
  return getRuleContext<GuavaParser::Expression_Context>(0);
}

GuavaParser::ScopeContext* GuavaParser::Statement_Context::scope() {
  return getRuleContext<GuavaParser::ScopeContext>(0);
}


size_t GuavaParser::Statement_Context::getRuleIndex() const {
  return GuavaParser::RuleStatement_;
}

void GuavaParser::Statement_Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement_(this);
}

void GuavaParser::Statement_Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement_(this);
}


std::any GuavaParser::Statement_Context::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GuavaParserVisitor*>(visitor))
    return parserVisitor->visitStatement_(this);
  else
    return visitor->visitChildren(this);
}

GuavaParser::Statement_Context* GuavaParser::statement_() {
  Statement_Context *_localctx = _tracker.createInstance<Statement_Context>(_ctx, getState());
  enterRule(_localctx, 8, GuavaParser::RuleStatement_);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(122);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(118);
      keywordStatement_();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(119);
      assign_();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(120);
      expression_(0);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(121);
      scope();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- KeywordStatement_Context ------------------------------------------------------------------

GuavaParser::KeywordStatement_Context::KeywordStatement_Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GuavaParser::KeywordStatement_Context::getRuleIndex() const {
  return GuavaParser::RuleKeywordStatement_;
}

void GuavaParser::KeywordStatement_Context::copyFrom(KeywordStatement_Context *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- NextStatContext ------------------------------------------------------------------

tree::TerminalNode* GuavaParser::NextStatContext::Next() {
  return getToken(GuavaParser::Next, 0);
}

GuavaParser::Expression_Context* GuavaParser::NextStatContext::expression_() {
  return getRuleContext<GuavaParser::Expression_Context>(0);
}

GuavaParser::NextStatContext::NextStatContext(KeywordStatement_Context *ctx) { copyFrom(ctx); }

void GuavaParser::NextStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNextStat(this);
}
void GuavaParser::NextStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNextStat(this);
}

std::any GuavaParser::NextStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GuavaParserVisitor*>(visitor))
    return parserVisitor->visitNextStat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- OnceStatContext ------------------------------------------------------------------

tree::TerminalNode* GuavaParser::OnceStatContext::Once() {
  return getToken(GuavaParser::Once, 0);
}

GuavaParser::Statement_Context* GuavaParser::OnceStatContext::statement_() {
  return getRuleContext<GuavaParser::Statement_Context>(0);
}

GuavaParser::OnceStatContext::OnceStatContext(KeywordStatement_Context *ctx) { copyFrom(ctx); }

void GuavaParser::OnceStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOnceStat(this);
}
void GuavaParser::OnceStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOnceStat(this);
}

std::any GuavaParser::OnceStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GuavaParserVisitor*>(visitor))
    return parserVisitor->visitOnceStat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ReturnStatContext ------------------------------------------------------------------

tree::TerminalNode* GuavaParser::ReturnStatContext::Return() {
  return getToken(GuavaParser::Return, 0);
}

GuavaParser::Value_Context* GuavaParser::ReturnStatContext::value_() {
  return getRuleContext<GuavaParser::Value_Context>(0);
}

GuavaParser::ReturnStatContext::ReturnStatContext(KeywordStatement_Context *ctx) { copyFrom(ctx); }

void GuavaParser::ReturnStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnStat(this);
}
void GuavaParser::ReturnStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnStat(this);
}

std::any GuavaParser::ReturnStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GuavaParserVisitor*>(visitor))
    return parserVisitor->visitReturnStat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LastStatContext ------------------------------------------------------------------

tree::TerminalNode* GuavaParser::LastStatContext::Last() {
  return getToken(GuavaParser::Last, 0);
}

GuavaParser::LastStatContext::LastStatContext(KeywordStatement_Context *ctx) { copyFrom(ctx); }

void GuavaParser::LastStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLastStat(this);
}
void GuavaParser::LastStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLastStat(this);
}

std::any GuavaParser::LastStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GuavaParserVisitor*>(visitor))
    return parserVisitor->visitLastStat(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BreakStatContext ------------------------------------------------------------------

tree::TerminalNode* GuavaParser::BreakStatContext::Break() {
  return getToken(GuavaParser::Break, 0);
}

GuavaParser::BreakStatContext::BreakStatContext(KeywordStatement_Context *ctx) { copyFrom(ctx); }

void GuavaParser::BreakStatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBreakStat(this);
}
void GuavaParser::BreakStatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GuavaParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBreakStat(this);
}

std::any GuavaParser::BreakStatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GuavaParserVisitor*>(visitor))
    return parserVisitor->visitBreakStat(this);
  else
    return visitor->visitChildren(this);
}
GuavaParser::KeywordStatement_Context* GuavaParser::keywordStatement_() {
  KeywordStatement_Context *_localctx = _tracker.createInstance<KeywordStatement_Context>(_ctx, getState());
  enterRule(_localctx, 10, GuavaParser::RuleKeywordStatement_);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(142);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GuavaParser::Return: {
        _localctx = _tracker.createInstance<GuavaParser::ReturnStatContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(124);
        match(GuavaParser::Return);
        setState(126);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
        case 1: {
          setState(125);
          value_();
          break;
        }
